--- a/app/src/main/res/layout/rank_detail.xml
+++ b/app/src/main/res/layout/rank_detail.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -70,11 +76,13 @@
                 android:text=""
                 android:minWidth="60dp"
                 android:layout_marginTop="10sp"
+                android:layout_weight="0.25"
                 >
             </TextView>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.20"
                 android:textSize="12sp"
                 android:textColor="#8a000000"
                 android:minWidth="100sp"
@@ -89,6 +97,7 @@
                 android:text="Time"
                 android:textSize="12sp"
                 android:minWidth="120dp"
+                android:layout_weight="0.35"
                 android:textAlignment="center"
                 android:layout_gravity="center|bottom"
                 android:layout_marginTop="10sp"
@@ -97,6 +106,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.20"
                 android:text="Hirscher"
                 android:textSize="12sp"
                 android:minWidth="80sp"
@@ -115,12 +125,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.25"
+                android:minWidth="80dp"
                 android:text="1. Meantime"
                 android:textSize="12sp"
                 android:layout_marginTop="10sp"
                 >
             </TextView>
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m1_best_abs"
                     android:layout_width="match_parent"
@@ -147,17 +160,20 @@
 
             <TextView
                 android:id="@+id/rank_detail_m1_time"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.35"
                 android:text="20,74"
                 android:textSize="20sp"
-                android:layout_gravity="center|bottom"
+                android:minWidth="70dp"
+                android:layout_gravity="center|top"
                 android:textAlignment="center"
                 android:layout_marginTop="10sp"
                 android:textColor="@color/colorRankTableFieldText">
             </TextView>
 
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m1_me_abs"
                     android:layout_width="match_parent"
@@ -192,12 +208,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.25"
                 android:text="2. Meantime"
                 android:textSize="12sp"
                 android:layout_marginTop="10sp"
                 >
             </TextView>
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m2_best_abs"
                     android:layout_width="match_parent"
@@ -226,15 +244,18 @@
                 android:id="@+id/rank_detail_m2_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.35"
+                android:minWidth="70dp"
                 android:text="20,74"
                 android:textSize="20sp"
-                android:layout_gravity="center|bottom"
+                android:layout_gravity="center|top"
                 android:textAlignment="center"
                 android:layout_marginTop="10sp"
                 android:textColor="@color/colorRankTableFieldText">
             </TextView>
 
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m2_me_abs"
                     android:layout_width="match_parent"
@@ -267,12 +288,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.25"
                 android:text="3. Meantime"
                 android:textSize="12sp"
                 android:layout_marginTop="10sp"
                 >
             </TextView>
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m3_best_abs"
                     android:layout_width="match_parent"
@@ -301,15 +324,18 @@
                 android:id="@+id/rank_detail_m3_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.35"
+                android:minWidth="70dp"
                 android:text="20,74"
                 android:textSize="20sp"
-                android:layout_gravity="center|bottom"
+                android:layout_gravity="center|top"
                 android:textAlignment="center"
                 android:layout_marginTop="10sp"
                 android:textColor="@color/colorRankTableFieldText">
             </TextView>
 
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m3_me_abs"
                     android:layout_width="match_parent"
@@ -344,12 +370,14 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.25"
                 android:text="Total"
                 android:textSize="12sp"
                 android:layout_marginTop="10sp"
                 >
             </TextView>
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m4_best_abs"
                     android:layout_width="match_parent"
@@ -378,15 +406,18 @@
                 android:id="@+id/rank_detail_m4_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.35"
+                android:minWidth="70dp"
                 android:text="20,74"
                 android:textSize="20sp"
-                android:layout_gravity="center|bottom"
+                android:layout_gravity="center|top"
                 android:textAlignment="center"
                 android:layout_marginTop="10sp"
                 android:textColor="@color/colorPrimary">
             </TextView>
 
-            <LinearLayout android:orientation="vertical">
+            <LinearLayout android:orientation="vertical"
+                android:layout_weight="0.20">
                 <TextView
                     android:id="@+id/rank_detail_m4_me_abs"
                     android:layout_width="match_parent"
@@ -413,10 +444,6 @@
         </TableRow>
     </TableLayout>
 
-    <TextView
-        android:id="@+id/rank"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="1. Rang" />
 
 </LinearLayout>
+</ScrollView>
